@@ -98,3 +98,5 @@
     Changed cost map generation to only happen when there at least 1 trainer.
 4/5/2022
     Finished adding pokemon encounters
+4/6/2022
+    Finished implementing random pokemon generation
